# madara

./: Cargo.toml
crates/consensus/aleph-bft-consensus/: Cargo.toml
crates/consensus/aleph-bft-consensus/src/: data.rs  finalise.rs  lib.rs
crates/consensus/alephBFT/: Cargo.toml
crates/consensus/alephBFT/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: alephBFT.rs  import_queue.rs  main.rs
