[package]
name = "aleph-bft-consensus"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleph-bft = "0.36"
async-trait = "0.1"
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
log = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

frame-system = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-statement-store = { workspace = true }
sp-timestamp = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true, features = ["server"] }

# Substrate primitives dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
# Substrate client dependencies
prometheus-endpoint = { workspace = true }
sc-rpc-api = { workspace = true }
# Substrate frame dependencies
# no substrate frame pallet dependencies for now

# Substrate tools dependencies
substrate-frame-rpc-system = { workspace = true }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
madara-runtime = { workspace = true, features = ["std"] }
mc-commitment-state-diff = { workspace = true }
mc-db = { workspace = true }
mc-eth-client = { workspace = true }
mc-l1-messages = { workspace = true }
mc-mapping-sync = { workspace = true }
mc-rpc = { workspace = true }
mc-starknet-block-import = { workspace = true, optional = true }
mc-storage = { workspace = true }
pallet-starknet = { workspace = true, features = ["genesis-loader"] }
pallet-starknet-runtime-api = { workspace = true }

# Madara utils
mc-genesis-data-provider = { workspace = true }

# Primitives
mp-block = { workspace = true }
mp-digest-log = { workspace = true }
mp-felt = { workspace = true }
mp-sequencer-address = { workspace = true, features = ["client"] }

# Starknet
blockifier = { workspace = true }

# AlephBFT consensus module
finality-aleph = {git = "https://github.com/Cardinal-Cryptography/aleph-node", tag = "r-13.3"}

# CLI-specific dependencies
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
try-runtime-cli = { optional = true, git = "https://github.com/massalabs/polkadot-sdk", branch = "release-polkadot-v1.3.0-std" }
url = { workspace = true }
