[package]
name = "alephBFT"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finality-aleph = {git = "https://github.com/Cardinal-Cryptography/aleph-node.git", tag = "r-13.3"}
parity-scale-codec = { workspace = true }
scale-info = {  workspace = true }
